# fsd28-profiler

./: .gitignore  .gitpod.Dockerfile  .gitpod.yml  Cargo.toml  README.md  out.txt
fsd28-app/: Cargo.toml  Trunk.toml  index.html  trunk.toml
fsd28-app/src/: app.rs  lib.rs  main.rs  model.rs  shared_messages.rs
fsd28-app/src/components/: action_tree_view.rs  card_generator.rs  mod.rs  modal.rs  modifiers_view.rs  roster_view.rs  top_menu.rs  units_view.rs
fsd28-app/static/styles/: areas.css  style.css
fsd28-cli/: Cargo.toml
fsd28-cli/src/: app_state.rs  main.rs
fsd28-lib/: Cargo.toml
fsd28-lib/data/: classes.json  default_actions.json  weapons.json
fsd28-lib/src/: lib.rs
fsd28-lib/src/models/: action.rs  characteristics.rs  class.rs  damage_chart.rs  dice_value.rs  mod.rs  modifier.rs  profile.rs  weapon.rs
fsd28-lib/src/utils/: mod.rs  pdf_ascii_generator.rs
