[package]
name = "fsd28-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# The in-repo lib
#fsd28-lib = { path = "../fsd28-lib" }

# Other crates
yew = { version = "0.20", features = ["csr"] }
wasm-bindgen = "0.2.90"
wasm-logger = "0.1.0"
log = "0.4.14"
image = "0.23.14"
base64 = "0.13.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
js-sys = "0.3.52"

[dependencies.web-sys]
version = "0.3.55"
features = [
    "HtmlCanvasElement",    
    "HtmlAnchorElement",
    "CanvasRenderingContext2d",
    "FileReader",
    "Blob",
]